objects/Job_Spec__c/Job_Spec__c.object-meta.xml
<CustomObject>
    <description>This is Creative Brief object. Also known as Job Spec.</description>
    <label>Creative Brief</label>
    <nameField>
        <label>Spec Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Creative Briefs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>