objects/Job_Spec__c/fields/Creative_Brief_Template__c.field-meta.xml
<CustomField>
    <fullName>Creative_Brief_Template__c</fullName>
    <label>Creative Brief Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>