objects/Job_Spec__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <defaultValue>&quot;Enter Description here&quot;</defaultValue>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>