objects/Job_Spec__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <label>Job Name</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Creative Briefs</relationshipLabel>
    <relationshipName>Job_Specs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>